# the-game

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: Brewfile
apps/: BUILD.bazel  build_app.bzl  deploy_rules.bzl
apps/simple_game/: BUILD  beast.cpp
apps/simple_server/: BUILD  main.cpp  tcp_listener.hpp  websocket_player_controller.hpp
client/frontend/apps/the-game/public/: index.html
client/frontend/apps/the-game/src/components/: CompanionTab.tsx  GameCard.tsx  Player.tsx  Table.tsx  UserDeck.tsx
client/frontend/apps/the-game/src/pages/: DebugPage.tsx  Game.tsx
client/frontend/apps/the-game/src/utils/: Common.tsx  GameUtils.tsx
core/: BUILD  game_session.cpp  game_session.hpp  player_controller_base.cpp  player_controller_base.hpp  players_manager.cpp  players_manager.hpp  websocket_player_controller.cpp  websocket_player_controller.hpp
domain/: BUILD  Card.h  Deck.h  Player.h
domain/test/: BUILD  deck_tests.cpp
frontend/: README.md
frontend/apps/the-game/: package-lock.json  package.json
frontend/apps/the-game/src/: App.tsx
frontend/apps/the-game/src/components/: CompanionTab.tsx  DebugPage.tsx  Game.tsx  GameCard.tsx  GameComponents.tsx  GamePage.css  GamePage.tsx  Player.tsx  Table.tsx  UserDeck.tsx
frontend/apps/the-game/src/pages/: DebugPage.tsx  Game.tsx
frontend/apps/the-game/src/utils/: Common.tsx  GameUtils.tsx
game/: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
game/.devcontainer/: Dockerfile  devcontainer.json  install-deps.sh
game/.devcontainer/scripts/: bootstrap.sh  install-deps.sh
game/apps/: BUILD  main.cpp
game/apps/deploy/: Dockerfile  cook-image.sh
game/apps/simple_game/: BUILD  beast.cpp  main.cpp
game/apps/simple_server/: BUILD  game_session.hpp  main.cpp  player_controller_base.hpp  tcp_listener.cpp  tcp_listener.h  tcp_listener.hpp  websocket_player_controller.hpp
game/common_tools/: BUILD.bazel  clang_format_wrap.sh  fixup_compile_commands_transient.sh.in  tools.bzl
game/core/: BUILD  Card.h  Deck.cpp  Deck.h  Player.h
game/core/test/: BUILD  deck_tests.cpp  simple_tests.cpp
game/docs/: Doxyfile
game/networking/: .boostbeast.cpp  net_utils.hpp  route_manager_base.hpp  session_base.h  tcp_listener_base.cpp  tcp_listener_base.h
game/networking/http/: BUILD  beast_utils.hpp  common.hpp  http_session.cpp  http_session.h
game/networking/interfaces/: i_network_server.h
game/networking/test/: networking_tests.cpp
game/networking/websocket/: BUILD  websocket_session.cpp  websocket_session.h  ws_context.hpp  ws_handler.hpp
game/support/games/: Card.h  Deck.cpp  Deck.h  Player.h
game/support/games/test/: BUILD  deck_tests.cpp
game/support/networking/: BUILD  beast_utils.hpp  common.hpp  http_session.cpp  http_session.h  net_utils.hpp  route_manager_base.hpp  session_base.h  tcp_listener_base.cpp  tcp_listener_base.h  websocket_session.h
game/support/networking/http/: BUILD  beast_utils.hpp  common.hpp  http_session.cpp  http_session.h
game/support/networking/interfaces/: i_network_server.h
game/support/networking/test/: BUILD  networking_tests.cpp
game/support/networking/websocket/: BUILD  websocket_session.cpp  websocket_session.h  ws_context.hpp  ws_handler.hpp
game/support/visit/: BUILD  property.h  property.hpp  visitable.h  visitable.hpp  visitor_base.hpp
game/support/visit/test/: BUILD  test_visitors.hpp  visit_tests.cpp
game/test/: BUILD
game/tools/: BUILD.bazel  fixup_compile_commands_transient.sh.in  hedron_bazel9_patch.patch  tools.bzl
libs/bazel/: utils.bzl
libs/visit/: property.hpp  visitable.hpp  visitor_base.hpp
libs/visit/test/: BUILD  test_visitors.hpp  visit_tests.cpp
networking/: .boostbeast.cpp  BUILD  common.hpp  route_manager_base.hpp  session_base.h  tcp_listener_base.cpp  tcp_listener_base.h
networking/http/: BUILD  beast_utils.hpp  common.hpp  http_session.cpp  http_session.h
networking/interfaces/: i_network_server.h
networking/test/: BUILD  networking_tests.cpp
networking/utils/: net_utils.hpp
networking/websocket/: BUILD  websocket_session.cpp  websocket_session.h  ws_handler.hpp
support/games/test/: BUILD
support/visit/: visitable.hpp  visitor_base.hpp
support/visit/test/: BUILD  visit_tests.cpp
tools/: BUILD.bazel  clang_format_wrap.sh  hedron_boost.patch  shell_format_wrap.sh
