###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "the-game",
    repo_name = "the-game",
)

bazel_dep(name = "rules_cc", version = "0.0.9")

# bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "tar.bzl", version = "0.7.0")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_appimage", version = "1.19.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    patch_args = ["-p1"],
    patches = ["//tools:hedron_bazel9_patch.patch"],
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.90.0.bcr.1")

# Makes @boost available for use: For example, add `@boost//:algorithm` to your deps.
# For more, see https://github.com/nelhage/rules_boost and https://www.boost.org
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
    # It is recommended to edit the above URL and the below sha256 to point to a specific version of this repository.
    # integrity = "sha256-...",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

# A C++11 single-file header-only cross platform HTTP/HTTPS library.
# https://github.com/yhirose/cpp-httplib/
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cpp_httplib",
    build_file = "//support/third-party:cpp_httplib.BUILD",
    strip_prefix = "cpp-httplib-0.16.0",
    urls = ["https://github.com/yhirose/cpp-httplib/archive/refs/tags/v0.16.0.tar.gz"],
)

# OCI container rules for deployment
# For testing, is recomended https://registry.bazel.build/modules/container_structure_test
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull needed base image
oci.pull(
    name = "debian_slim",
    image = "docker.io/library/debian",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    tag = "stable-slim",
)

# Expose the base image
use_repo(oci, "debian_slim", "debian_slim_linux_amd64", "debian_slim_linux_arm64_v8")
