"""
this makes bazel linter happy
"""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["fixup_compile_commands_transient.sh.in"])

sh_binary(
    name = "clang_formatting",
    srcs = ["clang_format_wrap.sh"],
)

buildifier(
    name = "buildifier",
)

format_multirun(
    name = "format",
    cc = ":clang_formatting",
    python = "@aspect_rules_lint//format:ruff",
)

compile_pip_requirements(
    name = "python_dev_deps",
    src = "python_dev_deps.in",
    requirements_txt = "python_dev_deps.txt",
)
